2006-06-13  Chris Toshok  <toshok@ximian.com>

	* SCSharp/SCSharp.UI.dll.sources: add MovieElement.cs

	* SCSharp/SCSharp.UI/SmackerPlayer.cs (.ctor): allow the user to
	specify the number of frames to be buffered.
	(DecoderThread): catch exception (which we seem to hit) and break
	out of the loop (and thus "finish" the animation).  Also, the
	whole "finish" thing needs rethinking, since we need to finish
	after we've *played* the last frame, not after we've queued it.
	(Events_Tick): initial creation of the surface needs some extra
	help so we get a surface with the proper alpha.
	(Stop): don't null out decoder/surf.

	* SCSharp/SCSharp.UI/MainMenu.cs (AddToPainter): start up the
	movie elements.
	(RemoveToPainter): stop the movie elements.
	(AddMovieElements): add normal/mouseover movie elements and set up
	event handlers to show/hide the mouseover element.  Set the movies
	to only queue 1 frame.
	(ResourceLoader): set up all the movie elements.

	* SCSharp/SCSharp.UI/MovieElement.cs: new hack in order to get
	smacker players in UIScreens.

	* SCSharp/SCSharp.Mpq.Smk/SmkDecoder.cs (BGRAData): black is
	transparent.

	* SCSharp/SCSharp.UI/UIElement.cs: add getter for the BinElement,
	and only call Painter.Instance.Invalidate() if we're visible.

2006-06-13  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.Mpq/MpqArchive.cs (DecryptBlock): decrypt the
	block in place instead of repeatedly allocating a 4 byte array.

2006-06-13  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/SmackerPlayer.cs: switch from using
	Thread.Suspend/Thread.Resume to using an AutoResetEvent.  the
	decoder calls .WaitOne when the queue is full, and the player
	thread calls .Set when the queue is less than half full.  This
	fixes the hanging of the player.  It also seems to fix the Ctrl-q
	behavior during playback.

	* SCSharp/SCSharp.UI/Cinematic.cs (PlayerFrameReady): move the
	scaling code here so we don't scale on every repaint.  also,